# cliptest

./: Cargo.toml  README.md  index.html
docs/: cliptest-1b25031d4dbd9bd3.js  cliptest-2bed940f89f4b7fe.js  cliptest-41822cb6aa9fde1f.js  cliptest-4320b12f71548251.js  cliptest-51ac9934253b5c5c.js  cliptest-90df111f16c553e.js  cliptest-b84eb4e103fe8d57.js  cliptest-be691677ac1d76d5.js  cliptest-d1a3f9d91aaac85c.js  cliptest-f8c6043ea5175c50.js  index.html
src/: main.rs
