[package]
name = "cliptest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
web-sys = { version = "0.3.64", features = [
    "Clipboard",
    "Navigator",
    "Location",
] }
wasm-bindgen = "0.2.87"

[profile.release]
lto = true
opt-level = 'z'
